src/main/java/com/example/mybookshopapp/errors/UserUnauthorizedException.java
package com.example.mybookshopapp.errors;

public class UserUnauthorizedException extends Exception{
    public UserUnauthorizedException(String message){
        super(message);
    }
}
